--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Repaso</title>
     <!-- CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="resources/css/styles.css">
 
 
@@ -15,14 +15,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
     <script src="//unpkg.com/@uirouter/visualizer@4"></script>
+    
     <!--Modelo  -->
-
+    <script src="model/ILibro.js"></script>
 
     <!--Servicios-->
-
+    <script src="services/librosServices.js"></script>
 
     <!--Controladores-->
     <script src="controllers/ContratosController.js"></script>
+    <script src="controllers/LibrosController.js"></script>
+
 
     <!--Nuestra APP-->
     <script src="app.js"></script>
@@ -32,20 +35,8 @@
 </head>
 <body ng-strict-di ng-cloak>
  
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-               <li class="nav-item"><a  class="nav-link" ui-sref="home" ui-sref-active="active">Home</a></li>
-                <li class="nav-item"><a  class="nav-link" ui-sref="leeme" ui-sref-active="active">Leeme</a></li>
-                 <li class="nav-item"><a  class="nav-link" ui-sref="contratos" ui-sref-active="active">Filter-Map-Reduce</a></li>
-        </ul>
-    </div>
-    </nav >
+   
+    <div ng-include="'views/includes/navbar.html'"></div>
 
     <!-- Vistas a cargar dinamicamente al navegar por la app-->
     <main class="container" ui-view></main>
