--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <script src="//unpkg.com/@uirouter/visualizer@4"></script>
     
     <!--Modelo  -->
+    <script src="model/IContratosResumen.js"></script>
     <script src="model/ILibro.js"></script>
+   
 
     <!--Servicios-->
     <script src="services/librosServices.js"></script>
